// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Krumbs renders breadcrumb links 1`] = `
<ul class="krumbs style-body-bc">
  <li class="krumb-item truncate" style="max-width: 38ch;"><a href="/services" class="" title="Services">Services</a> <span class="kong-icon kong-icon-chevronRight"><!----></span></li>
  <li class="krumb-item truncate" style="max-width: 38ch;"><a title="Go to Kong Docs" href="https://docs.konghq.com" target="_blank">External Link</a> <span class="kong-icon kong-icon-chevronRight"><!----></span></li>
</ul>
`;

exports[`Krumbs renders breadcrumb links without needing a router 1`] = `
<ul class="krumbs style-body-bc">
  <li class="krumb-item truncate" style="max-width: 38ch;"><a title="Go to Kong Docs" href="https://docs.konghq.com" target="_blank">External Link</a> <span class="kong-icon kong-icon-chevronRight"><!----></span></li>
</ul>
`;
